Table filtering now checkboxes

--- a/app/assets/sass/unbranded.scss
+++ b/app/assets/sass/unbranded.scss
@@ -140,19 +140,19 @@ a:visited {
 
 .sortable {
   &:after {
-    content: '  ↕'
+    content: '▼▲'
 
   }
 }
 
 .sortable--asc {
   &:after {
-    content: '  ↑';
+    content: '  ▲';
   }
 }
 
 .sortable--desc {
   &:after {
-    content: '  ↓';
+    content: '  ▼';
   }
 }
