--- a/app/assets/sass/unbranded.scss
+++ b/app/assets/sass/unbranded.scss
@@ -15,60 +15,42 @@ $govuk-page-width: 1200px;
 // If you need to create a page as part of your journey, but without GOV.UK branding
 // See localhost:3000/docs/examples/blank-unbranded
 
-.govuk-tag--progress {
-
-  color: black;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  text-transform: capitilize;
-}
 
 .govuk-tag--delayed {
   background-color: rgba(163,24,38,1);
   color: white;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
   padding-top: 5px;
   padding-bottom: 5px;
-  text-transform: capitilize;
+  font-weight: bold;
 }
 
-.govuk-tag--complete {
 
-  color: black;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  text-transform: capitilize;
-}
 
 #search-button {
-  width: 150px;
+  width: 100px;
   height: 40px;
-  background-color:  #006435;
+  background-color:  darkgrey;
   color: white;
-  font-size: 19px;
-  margin-right: 20px;
+  font-size: 25px;
+  margin-right: 0;
   box-shadow: none;
-  border-color: #00331B;
+  border-color: #595959;
   border-bottom-width: 2px;
 
 
 }
 
 #search-button:hover {
-  width: 150px;
+  width: 100px;
   height: 40px;
-  background-color: #006435;
-  border-color: #00331B;
-  border-bottom-width: 2px;
-  font-size: 19px;
+  background-color:  darkgrey;
   color: white;
-  margin-right: 20px;
-  box-shadow: 1px 1px 1px black
+  font-size: 25px;
+  margin-right: 0;
+  box-shadow: none;
+  box-shadow: 1px 1px 1px #595959
 }
 
 .hide-row {
@@ -155,4 +137,15 @@ a:visited {
   &:after {
     content: '  ▼';
   }
+}
+
+.filter {
+  font-size: 18px;
+  background-color: lightgrey;
+  border-color: none;
+  border-radius: 3px;
+  padding: 10px;
+  width: 100%;
+  height: 40px;
+  text-align: left;
 }
