--- a/app/assets/sass/unbranded.scss
+++ b/app/assets/sass/unbranded.scss
@@ -78,7 +78,7 @@ $govuk-page-width: 1200px;
 .my-work tbody td {
 
   border-bottom: 0;
-  border-top: 1px solid #ddd;
+  border-top: 2px solid #ddd;
 }
 
 .my-work tbody tr {
@@ -144,12 +144,19 @@ a:visited {
   background-color: lightgrey;
   border-color: none;
   border-radius: 3px;
-  padding: 10px;
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   width: 100%;
-  height: 40px;
+  height: px;
   text-align: left;
 }
 
-.label:after {
-  content: ' +'
+.filter:after {
+  content: '  +'
+
+}
+
+.active:after {
+  content: '  -'
 }
