--- a/app/views/archive.html
+++ b/app/views/archive.html
@@ -209,19 +209,14 @@ for (i = 0; i < coll.length; i++) {
 <!---CONTENT----------------------------------------------------------------->
 
 
-<br>
-<a href="buildsessionone.html">
-Session one V2 - Substantive + Prelim
-<br>
-<br>
-<a href="buildsessionone.html">
-Session one V2 - Prelim
-<br>
-<br>
 
-<hr style="color: lightgrey; ">
+<a href="sessionone.html">
+v1.0: Session one
+</a>
 <br>
-<a href="archive.html"> Archive </a>
+<a href="portalhome.html">
+Homepage
+</a>
 
 </div>
 
