--- a/app/assets/sass/unbranded.scss
+++ b/app/assets/sass/unbranded.scss
@@ -159,12 +159,12 @@ a:visited {
 }
 
 .filter:after {
-  content: '  +'
+  content: '  ▼'
 
 }
 
 .active:after {
-  content: '  -'
+  content: '  ▲'
 }
 
 .govuk-checkboxes__label {
