--- a/app/views/buildsessionone.html
+++ b/app/views/buildsessionone.html
@@ -378,14 +378,14 @@ for (i = 0; i < coll.length; i++) {
   <tr class="govuk-table__row expandy-row hide-row">
     <!-- Vertical line -->
     <td class="govuk-table__cell" colspan="1" ><div class="vertical" style="height: 100px;"></div>
-
+      </td>
     <div>
     <!-- HMLR reference -->
 
             <td class="govuk-table__cell" colspan="2" style="padding-top: 0px;">
             <b> HMLR Reference</b>
             <br><br>
-            <p style="font-size: 14px;">562.182.9891 </p>
+            <p style="font-size: 14px;">562.182.9891 </p></td>
 
     <!-- Correspondence -->
           <td class="govuk-table__cell" colspan="2">
@@ -403,7 +403,6 @@ for (i = 0; i < coll.length; i++) {
 
       </div>
       </tr>
-
   </tbody>
 
   <tbody class="govuk-table__body">
@@ -423,14 +422,14 @@ for (i = 0; i < coll.length; i++) {
   <tr class="govuk-table__row expandy-row hide-row">
     <!-- Vertical line -->
     <td class="govuk-table__cell" colspan="1" ><div class="vertical" style="height: 100px;"></div>
-
+  </td>
     <div>
     <!-- HMLR reference -->
             <td class="govuk-table__cell" colspan="2" style="padding-top: 0px;">
             <b> HMLR Reference</b>
             <br><br>
             <p style="font-size: 14px;">98.986.HJ98B </p>
-
+            </td>
     <!-- Correspondence -->
           <td class="govuk-table__cell" colspan="2">
             <b>Correspondence</b>
@@ -469,7 +468,7 @@ for (i = 0; i < coll.length; i++) {
       <tr class="govuk-table__row expandy-row hide-row">
         <!-- Vertical line -->
         <td class="govuk-table__cell" colspan="1" ><div class="vertical" style="height: 100px;"></div>
-
+  </td>
         <div>
         <!-- HMLR reference -->
                 <td class="govuk-table__cell" colspan="2" style="padding-top: 0px;">
@@ -519,7 +518,7 @@ for (i = 0; i < coll.length; i++) {
   <tr class="govuk-table__row expandy-row hide-row">
     <!-- Vertical line -->
     <td class="govuk-table__cell" colspan="1" ><div class="vertical" style="height: 150px;"></div>
-
+  </td>
     <div>
 
 
@@ -533,6 +532,7 @@ for (i = 0; i < coll.length; i++) {
             <b> HMLR Reference</b>
             <br><br>
             <p style="font-size: 14px;">823.003.432B </p>
+            </td>
 
     <!-- Correspondence -->
           <td class="govuk-table__cell" colspan="2" style="padding-top: 0px;">
@@ -574,13 +574,14 @@ for (i = 0; i < coll.length; i++) {
   <!-- Vertical line -->
   <td class="govuk-table__cell" colspan="1" ><div class="vertical" style="height: 100px;"></div>
     <div>
+        </td>
       <div>
     <!-- HMLR reference -->
             <td class="govuk-table__row" colspan="2" style="padding-top: 0px;">
             <b> HMLR Reference</b>
             <br><br>
             <p style="font-size: 14px;">872.143.1JA </p>
-
+            </td>
     <!-- Correspondence -->
           <td class="govuk-table__cell" colspan="2" style="padding-top: 0px;">
             <b>Correspondence</b>
@@ -598,7 +599,7 @@ for (i = 0; i < coll.length; i++) {
             </p></td>
 
       </div>
-    </td>
+    </tr>
 
 
   </tbody>
@@ -619,6 +620,7 @@ for (i = 0; i < coll.length; i++) {
   <tr class="govuk-table__row expandy-row hide-row">
     <!-- Vertical line -->
     <td class="govuk-table__cell" colspan="1" ><div class="vertical" style="height: 100px;"></div>
+      </td>
       <div>
         <div>
       <!-- HMLR reference -->
@@ -626,7 +628,7 @@ for (i = 0; i < coll.length; i++) {
               <b> HMLR Reference</b>
               <br><br>
               <p style="font-size: 14px;">982.988.129C </p>
-
+              </td>
       <!-- Correspondence -->
             <td class="govuk-table__cell" colspan="2" style="padding-top: 0px;">
               <b>Correspondence</b>
@@ -644,7 +646,7 @@ for (i = 0; i < coll.length; i++) {
               </p></td>
 
         </div>
-      </td>
+      </tr>
 
     </tbody>
 
@@ -664,7 +666,7 @@ for (i = 0; i < coll.length; i++) {
   <tr class="govuk-table__row expandy-row hide-row">
     <!-- Vertical line -->
     <td class="govuk-table__cell" colspan="1" ><div class="vertical" style="height: 150px;"></div>
-
+      </td>
     <div>
 
 
@@ -678,7 +680,7 @@ for (i = 0; i < coll.length; i++) {
             <b> HMLR Reference</b>
             <br><br>
             <p style="font-size: 14px;">876.123.533W </p>
-
+            </td>
     <!-- Correspondence -->
           <td class="govuk-table__cell" colspan="2" style="padding-top: 0px;">
             <br><br><br><br><br>
@@ -718,7 +720,7 @@ for (i = 0; i < coll.length; i++) {
   <tr class="govuk-table__row expandy-row hide-row">
     <!-- Vertical line -->
     <td class="govuk-table__cell" colspan="1" ><div class="vertical" style="height: 100px;"></div>
-
+      </td>
     <div>
 
     <!-- HMLR reference -->
@@ -762,7 +764,7 @@ for (i = 0; i < coll.length; i++) {
   <tr class="govuk-table__row expandy-row hide-row">
     <!-- Vertical line -->
     <td class="govuk-table__cell" colspan="1" ><div class="vertical" style="height: 100px;"></div>
-
+      </td>
     <div>
     <!-- HMLR reference -->
 
@@ -770,7 +772,7 @@ for (i = 0; i < coll.length; i++) {
             <b> HMLR Reference</b>
             <br><br>
             <p style="font-size: 14px;">897.576.89M </p>
-
+            </td>
     <!-- Correspondence -->
           <td class="govuk-table__cell" colspan="2">
             <b>Correspondence</b>
@@ -806,7 +808,7 @@ for (i = 0; i < coll.length; i++) {
   <tr class="govuk-table__row expandy-row hide-row">
     <!-- Vertical line -->
     <td class="govuk-table__cell" colspan="1" ><div class="vertical" style="height: 100px;"></div>
-
+</td>
     <div>
     <!-- HMLR reference -->
 
@@ -814,7 +816,7 @@ for (i = 0; i < coll.length; i++) {
             <b> HMLR Reference</b>
             <br><br>
             <p style="font-size: 14px;">982.876.456E </p>
-
+            </td>
     <!-- Correspondence -->
           <td class="govuk-table__cell" colspan="2">
             <b>Correspondence</b>
