--- a/app/views/buildsessionone.html
+++ b/app/views/buildsessionone.html
@@ -3,7 +3,6 @@
 
 
 {% block pageTitle %}
-
 {% endblock %}
 
 {% block content %}
@@ -11,6 +10,7 @@
 <!-- Back & clear data top -->
 <div class="govuk-width-container">
    <a href="index.html" class="govuk-back-link">Back to Index</a>
+   <meta charset="utf-8"/>
 
 
 <!-- Phase banner ----->
@@ -30,7 +30,7 @@
 <!-- Header -->
   <div class="govuk-grid-row" >
   <div class="govuk-grid-column-full" id="headerdiv">
-  <img src="public/images/headerlogo.svg">
+  <img src="public/images/headerlogo.svg" alt="hmlrlogo">
   <br>
   <a href="#" style="float: right; font-size: 14px; font-weight: ; margin-top: -15px;"> Logout </a>
 
@@ -321,20 +321,20 @@ for (i = 0; i < coll.length; i++) {
       <div style="-webkit-transform: rotate(45deg);
                -moz-transform: rotate(-45deg);
                  -o-transform: rotate(-45deg);
-                    transform: rotate(-45deg);" > &#9906;</div>
-    </button>
+                    transform: rotate(-45deg);" > &#9906;</div>  </button>
 
     <input type="text" id="search-input" style="width: 280px; height: 35px; font-size: 16px; padding-left: 0px; float: right; margin-right: 0px; border-color: black; border-width: 1px; border-radius: 2px;">
-
+    </div>
 
 
 
 <br>
 <br>
 <br>
-<a href="#" id="reset" style="float: right ;">Reset search and filters</a>
+<a href="#" id="reset" style="float: right; padding-right: 15px;">Reset search and filters</a>
 <br>
   </form>
+  <br>
   <br>
 
 
